@@ -18,6 +18,7 @@
 #define MenuItemConsole 1006
 #define MenuItemStartIrqTrace 1007
 #define MenuItemDumpTraceLog 1008
+#define MenuItemGsmCode 1009
 
 #define ErrorAlert      1000
 #define InfoAlert       1001
